# create2-benchmark

./: README.md  README_CN.md
bun/: README.md  package.json
bun/src/: create2.ts  main.ts  test.ts
go/: .gitignore  Makefile  README.md  create2.go  go.mod  main.go
rust/: Cargo.toml  Makefile  README.md
rust-cpu-parallel/: Cargo.toml  Makefile  README.md
rust-cpu-parallel/src/: create2.rs  main.rs
rust-gpu-evm/: Cargo.toml
rust-gpu-evm/src/: create2.rs  create2_shader.metal  main.rs
rust-gpu-mac/: Cargo.toml  Makefile  README.md
rust-gpu-mac/src/: create2.rs  create2_shader.metal  gpu_compute.rs  main.rs
rust-gpu-tron/: .gitignore  Cargo.toml  Makefile  README.md
rust-gpu-tron/src/: create2.rs  create2_shader.metal  gpu_compute.rs  main.rs
rust/src/: create2.rs  main.rs
