[package]
name = "create2-benchmark-gpu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark-gpu"
path = "src/main.rs"

[dependencies]
metal = "0.32.0"
objc = "0.2"
sha3 = "0.10"

[profile.release]
lto = "fat"           # 最大化链接时优化
codegen-units = 1     # 单一编译单元，更好的优化
panic = "abort"       # 减少二进制大小
opt-level = 3         # 最高优化级别
strip = true          # 移除符号信息
overflow-checks = false  # 关闭溢出检查（生产环境慎用）